--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@hapi/joi": "^17.1.1",
     "@prisma/client": "^5.10.2",
     "@types/http-errors": "^2.0.4",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1",
     "short-unique-id": "^5.0.3"
   },
   "devDependencies": {
