--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@types/express": "^4.17.21",
     "@types/hapi__joi": "^17.1.14",
     "@types/node": "^20.11.23",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
